const mongoose = require('mongoose');

const UserSchema = new mongoose.Schema({
    firebaseUid: {
        type: String,
        required: false, // Changed from true for Native Auth
        unique: true,
        sparse: true, // Allow multiple nulls
        index: true
    },
    fullName: {
        type: String,
        required: true
    },
    email: {
        type: String,
        required: true,
        unique: true,
        index: true
    },
    role: {
        type: String,
        enum: ['HOD', 'FACULTY', 'INTERN'],
        required: true
    },
    gender: {
        type: String,
        enum: ['M', 'F', 'O'],
        default: 'M' // Defaulting to M for now to avoid breaking existing without migration
    },
    areaOfExpertise: {
        type: String,
        required: false
    },
    regNo: {
        type: String // Optional, mainly for interns
    },
    batchId: {
        type: mongoose.Schema.Types.ObjectId,
        ref: 'Batch'
    },
    isActive: {
        type: Boolean,
        default: true
    },
    password: {
        type: String,
        required: true,
        select: false // Do not return by default
    }
}, { timestamps: true });

// Encrypt password using bcrypt
const bcrypt = require('bcryptjs');

UserSchema.pre('save', async function (next) {
    if (!this.isModified('password')) {
        next();
    }
    const salt = await bcrypt.genSalt(10);
    this.password = await bcrypt.hash(this.password, salt);
});

// Match user entered password to hashed password in database
UserSchema.methods.matchPassword = async function (enteredPassword) {
    return await bcrypt.compare(enteredPassword, this.password);
};

module.exports = mongoose.model('User', UserSchema);
